# finetuned-RAG-vectorstore-chatbot

./: .gitignore  README.md  ai_agent.py  ai_handler.py  ai_trainer.py  fine_tuner.py  johnny_nylund_2025_Resume.txt  lora_explanations.md  main.py  pyproject.toml  test.json  train.json
chroma_rag_store/: chroma.sqlite3
