[project]
name = "finetuned-rag-vectorstore-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "peft>=0.17.0",
    "python-dotenv>=1.1.1",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
]
