[project]
name = "finetuned-rag-vectorstore-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "bitsandbytes>=0.47.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.6",
    "peft>=0.17.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "safetensors>=0.6.2",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.2",
]
